--- a/formulaire_pro.html
+++ b/formulaire_pro.html
@@ -32,7 +32,7 @@
         <div id='qualif' class="section">
             <h2>Inscription Module PRO</h2>
             <h3>Formation de 3 semaines</h3>
-            <h1>IFRAME FORMULAIRE ODOO</h1>
+            <iframe src="https://erp.dualsun.com/formation-poseurs-davenir-residentiel" class="iframe-style" width="100%" height="800" title="Formulaire Module Tremplin"></iframe>
         </div>
         <div id='footer' class="section">
             <div class="footer">
