--- a/formulaire_qualif.html
+++ b/formulaire_qualif.html
@@ -32,7 +32,8 @@
         <div id='qualif' class="section">
             <h2>Inscription Module QUALIF'</h2>
             <h3>Formation de 3 ou 4 jours</h3>
-            <h1>IFRAME FORMULAIRE ODOO</h1>
+            <iframe src="https://erp.dualsun.com/formation-poseurs-davenir-residentiel" class="iframe-style" width="100%" height="800" title="Formulaire Module Tremplin"></iframe>
+
         </div>
         <div id='footer' class="section">
             <div class="footer">
