--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body >
     <div class="navbar-wagon">
       <div class="navbar-wagon-left">
-        <a href="index.html"><img class="logo" src='images/poseurs_davenir_logo.png'></a>
+        <a href="index.html"><img class="logo" alt="logo Poseurs d'Avenir" src='images/poseurs_davenir_logo.png'></a>
       </div>
       <div class="navbar-wagon-right hidden-xs">
         <a href="index.html#programs" class="navbar-wagon-item navbar-wagon-link">Programmes</a>
@@ -37,10 +37,10 @@
         <p>
           Poseurs d’Avenir propose des formations professionnalisantes inédites à la pose de panneaux solaires. Ces formations sont co-construites par DualSun, BAO Formation & ENGIE My Power. 
         </p>
-        <img src='images/poseurs_davenir_partenaires.png' class="banner-logos">
+        <img src='images/poseurs_davenir_partenaires.png' alt="partenaires Poseurs d'Avenir" class="banner-logos">
       </div>
       <div class="hidden-xs col-sm-6">
-        <img src='images/poseurs_davenir_hero.png' class="banner-image">
+        <img src='images/poseurs_davenir_hero.png' alt="installateurs avec un panneau solaire" class="banner-image">
       </div>
     </div>
     <div id="programs" class="section background-yellow">
@@ -108,7 +108,7 @@
       <a href="#calendar" class="btn btn-flat margin-top-small">Candidatez pour un module Tremplin à l’emploi</a>
       <div class="row">
         <div class="col-xs-12 col-sm-4 margin-top program-image">
-          <img src="images/poseurs_davenir_tremplin.png" class="description-image"/>
+          <img src="images/poseurs_davenir_tremplin.png" alt="module tremplin - poseurs en formation" class="description-image"/>
         </div>
         <div class="col-xs-12 col-sm-8 margin-top card-product background-yellow">
           <h3>Caractéristiques de la formation :</h3>
@@ -138,7 +138,7 @@
       <a href="#calendar" class="btn btn-flat margin-top-small">Inscrivez-vous pour un module PRO</a>
       <div class="row">
         <div class="col-xs-12 col-sm-4 margin-top">
-          <img src="images/poseurs_davenir_pro.jpeg" class="description-image"/>
+          <img src="images/poseurs_davenir_pro.jpeg" alt="module pro" class="description-image"/>
         </div>
         <div class="col-xs-12 col-sm-8 margin-top card-product background-white">
           <h3>Caractéristiques de la formation :</h3>
@@ -164,7 +164,7 @@
       <a href="#calendar" class="btn btn-flat margin-top-small">Inscrivez-vous pour un module QUALIF'</a>
       <div class="row">
         <div class="col-xs-12 col-sm-4 margin-top">
-          <img src="images/poseurs_davenir_qualif.png" class="description-image"/>
+          <img src="images/poseurs_davenir_qualif.png" alt="module qualif - logo RGE" class="description-image"/>
         </div>
         <div class="col-xs-12 col-sm-8 margin-top card-product background-yellow">
           <h3>Caractéristiques de la formation :</h3>
@@ -424,7 +424,7 @@
       <div class="row partners">
         <div class="col-xs-12 col-sm-6 col-md-4">
           <div class="centered">
-            <img class="img-partner-logo-dualsun extra-padding-bottom" src='images/dualsun_logo.png'>
+            <img class="img-partner-logo-dualsun extra-padding-bottom" alt="logo DualSun" src='images/dualsun_logo.png'>
           </div>
           <p>
             DualSun est un fabricant français, concepteur du premier panneau solaire hybride certifié au monde, le panneau SPRING. Ce panneau 2-en-1 produit à la fois de l’électricité et de l’eau chaude et permet d’obtenir 2,5 fois plus d’énergie qu’un panneau photovoltaïque standard. Depuis ses débuts, DualSun s’engage à développer localement des solutions écologiques pour augmenter l’autonomie énergétique de ses clients et réduire leur empreinte carbone. Sa mission est de répondre de façon renouvelable à l’ensemble des besoins en énergie des bâtiments.
@@ -432,7 +432,7 @@
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4">
           <div class="centered">
-            <img class="img-partner-logo" src='images/bao_formation_logo.png'>
+            <img class="img-partner-logo" alt="logo BAO Formation" src='images/bao_formation_logo.png'>
           </div>
           <p>
             BAO Formation est un organisme de formation aux métiers d’hier et de demain, dispensant chaque année près de 200 000 heures de formation en France, à destination de plus de 600 stagiaires. La pédagogie proposée est axée sur le geste professionnel et la formation en situation de production. Les formations proposées répondent aux nouveaux besoins de recrutement dans le bâtiment comme la maçonnerie sur cordes, la pose de panneaux photovoltaïques ou encore la maçonnerie du bâti ancien.
@@ -440,7 +440,7 @@
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4">
           <div class="centered">
-            <img class="img-partner-logo" src='images/engie_mypower_logo.png'>
+            <img class="img-partner-logo" alt="logo ENGIE MyPower" src='images/engie_mypower_logo.png'>
           </div>
           <p>
             ENGIE My Power est l’entité du Groupe ENGIE dédiée à la commercialisation en France d’énergie et des services associés aux particuliers et petits professionnels. 1er fournisseur d’électricité verte en France, Engie propose également des solutions solaires en autoconsommation pour les clients particuliers avec My Power. Son ambition est d’accompagner ses clients pour agir en faveur de la transition énergétique et contribuer ainsi à un progrès harmonieux.
@@ -451,7 +451,7 @@
     </div>
     <div id='footer' class="section">
       <div class="footer">
-        <a href="#"><img class='footer-image' src='images/poseurs_davenir_logo.png'></a>
+        <a href="#"><img class='footer-image' alt="logo Poseurs d'Avenir" src='images/poseurs_davenir_logo.png'></a>
         <p>contact@poseursdavenir.com</p>
       </footer>
     </div>
