--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <ul>
         <li>qui répondent au marché de l’emploi</li>
         <li>où chaque module de formation est réalisé avec des partenaires entreprises et institutionnels</li>
-        <li>qui sont basées sur l’apprentissage par le geste professionnel (70% pratique, 30% théorique)</li>
+        <li>qui sont basées sur l’apprentissage par le geste professionnel</li>
       </ul>
       <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-3">
