--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
+    <title>Poseurs d'Avenir</title>
+    <meta name="description" content="Poseurs d’Avenir propose des formations solaires inédites, co-construites par DualSun, BAO Formation & ENGIE My Power.">
+    <meta property=”og:image” content=”images/poseurs_davenir_hero.png” />
     <meta charset="utf-8">
     <link rel="icon" href="images/poseurs_davenir_icon.png">
     <link rel="stylesheet" href="style.css" type="text/css">
@@ -12,8 +15,7 @@
     <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Poseurs d'Avenir</title>
-    <meta name="description" content="Poseurs d’Avenir propose des formations solaires inédites, co-construites par DualSun, BAO Formation & ENGIE My Power.">
+    
   </head>
 
   <body>
