--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
     <div id='footer' class="section background-yellow">
       <div class="footer">
         <a href="#"><img class='footer-image' alt="logo Poseurs d'Avenir" src='images/poseurs_davenir_logo.png'></a>
-        <p>contact@poseursdavenir.com</p>
+        <p>contact@poseursdavenir.com Test</p>
       </footer>
     </div>
   </body>
