--- a/index.html
+++ b/index.html
@@ -123,12 +123,11 @@
       <p>
         Cette formation est destinée aux demandeurs d’emploi désireux de se former au photovoltaïque, un métier en pleine ascension. La formation, gratuite et rémunérée, est basée sur <strong>le geste professionnel</strong> et donne les clés pour intégrer immédiatement la filière du solaire. 
       </p>
-      <a href="#calendar" class="btn btn-flat margin-top-small">Candidatez pour un module Tremplin à l’emploi</a>
       <div class="row">
         <div class="col-xs-12 col-sm-4 margin-top program-image">
           <img src="images/poseurs_davenir_tremplin.png" alt="module tremplin - poseurs en formation" class="description-image"/>
         </div>
-        <div class="col-xs-12 col-sm-8 margin-top card-product background-yellow">
+        <div class="col-xs-12 col-sm-8 margin-top card-product">
           <h3>Caractéristiques de la formation :</h3>
           <p><strong>
             Durée :</strong> 400 heures - 330 heures de formation pure (30% de théorie et 70% de pratique) & 70 heures d’immersion en entreprise lors d’un stage chez un installateur de la région, préfigurant une embauche à la fin du parcours</p>
@@ -144,6 +143,7 @@
           <p>
             <strong>Suivi individuel :</strong> Un suivi et un accompagnement socioprofessinnel personnalisé
           </p>
+          <a href="#calendar" class="btn btn-flat margin-top">Candidatez pour un module Tremplin à l’emploi</a>
         </div>
       </div>
     </div>
@@ -153,12 +153,12 @@
       <p>
         Le module professionnel est destiné aux professionnels du secteur du bâtiment ou du solaire qui souhaitent approfondir leurs compétences et qualifications dans le domaine du  photovoltaïque. 
       </p>
-      <a href="#calendar" class="btn btn-flat margin-top-small">Inscrivez-vous pour un module PRO</a>
+      
       <div class="row">
         <div class="col-xs-12 col-sm-4 margin-top">
           <img src="images/poseurs_davenir_pro.jpeg" alt="module pro" class="description-image"/>
         </div>
-        <div class="col-xs-12 col-sm-8 margin-top card-product background-white">
+        <div class="col-xs-12 col-sm-8 margin-top card-product">
           <h3>Caractéristiques de la formation :</h3>
           <p><strong>Durée :</strong> 105 heures</p>
           <p>
@@ -170,6 +170,7 @@
           <p>
             <strong>Autre :</strong> Pour toutes formations intra-entreprise, veuillez contacter BAO Formation
           </p>
+          <a href="#calendar" class="btn btn-flat margin-top">Inscrivez-vous pour un module PRO</a>
         </div>
       </div>
     </div>
@@ -179,12 +180,11 @@
       <p>
         Poseurs d’Avenir propose plusieurs formations pour obtenir différentes certifications RGE en lien avec le secteur solaire. 
       </p>
-      <a href="#calendar" class="btn btn-flat margin-top-small">Inscrivez-vous pour un module QUALIF'</a>
       <div class="row">
         <div class="col-xs-12 col-sm-4 margin-top">
           <img src="images/poseurs_davenir_qualif.png" alt="module qualif - logo RGE" class="description-image"/>
         </div>
-        <div class="col-xs-12 col-sm-8 margin-top card-product background-yellow">
+        <div class="col-xs-12 col-sm-8 margin-top card-product">
           <h3>Caractéristiques de la formation :</h3>
           <p><strong>
             Durée :</strong> 21 ou 28 heures</p>
@@ -194,6 +194,7 @@
           <p>
             <strong>Certifications :</strong> QauliPV Elec, QaliPV HP, QualiPV Bat, ou Qualisol CESI 
           </p>
+          <a href="#calendar" class="btn btn-flat margin-top">Inscrivez-vous pour un module QUALIF'</a>
         </div>
       </div>
     </div>
@@ -210,12 +211,11 @@
         <strong>La rentrée s'effectuera en septembre 2022.</strong>
       </p>
       </p>
-      <a href="https://forms.gle/zXkDzEYiinUxzBC89" target="_blank" class="btn btn-flat margin-top-small">Candidatez pour NRSud</a>
       <div class="row">
         <div class="col-xs-12 col-sm-4 margin-top">
           <img src="images/poseurs_davenir_apprenti.png" alt="ecole de production" class="description-image"/>
         </div>
-        <div class="col-xs-12 col-sm-8 margin-top card-product background-white">
+        <div class="col-xs-12 col-sm-8 margin-top card-product">
           <h3>Caractéristiques de la formation :</h3>
           <p><strong>Durée :</strong> 3 ou 4 ans, 35h/semiane dont 80% en apprentissage</p>
           <p><strong>Taux d'encadrement :</strong> 2 maîtres professionnels pour 14 élèves, 1 maître référent pour la fabrication en atelier et 1 autre maître référent pour la réalisation des chantiers en extérieur.</p>
@@ -225,6 +225,7 @@
           <p>
             <strong>Habilitations :</strong> Sauveteur Secouriste du Travail (SST), Port du harnais travail en hauteur, Habilitation Electrique BrPV, QualiPV Elec ou HP, QualiSol, QualiPac, permis CACES
           </p>
+          <a href="https://forms.gle/zXkDzEYiinUxzBC89" target="_blank" class="btn btn-flat margin-top">Candidatez pour NRSud</a>
         </div>
       </div>
     </div>
@@ -299,7 +300,7 @@
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
                 Marseille
               </h2>
-              <a href="https://forms.gle/U1BxJxB3LZ7V2SDS8" target="_blank" class="btn btn-flat margin-top-small open__popup">Inscrivez-vous</a>
+              <a href="https://forms.gle/U1BxJxB3LZ7V2SDS8" target="_blank" class="btn btn-flat margin-top-small">Inscrivez-vous</a>
             </div>
           </div>
           <div class="card-event background-blue">
@@ -476,7 +477,10 @@
             <img class="img-partner-logo-dualsun extra-padding-bottom" alt="logo DualSun" src='images/dualsun_logo.png'>
           </div>
           <p>
-            DualSun est un fabricant français, concepteur du premier panneau solaire hybride certifié au monde, le panneau SPRING. Ce panneau 2-en-1 produit à la fois de l’électricité et de l’eau chaude et permet d’obtenir 2,5 fois plus d’énergie qu’un panneau photovoltaïque standard. Depuis ses débuts, DualSun s’engage à développer localement des solutions écologiques pour augmenter l’autonomie énergétique de ses clients et réduire leur empreinte carbone. Sa mission est de répondre de façon renouvelable à l’ensemble des besoins en énergie des bâtiments.
+            DualSun est un fabricant français, concepteur du premier panneau solaire hybride certifié au monde, le panneau SPRING. Ce panneau 2-en-1 produit à la fois de l’électricité et de l’eau chaude et permet d’obtenir 2,5 fois plus d’énergie qu’un panneau photovoltaïque standard. 
+          </p>
+          <p>
+            Depuis ses débuts, DualSun s’engage à développer localement des solutions écologiques pour augmenter l’autonomie énergétique de ses clients et réduire leur empreinte carbone. Sa mission est de répondre de façon renouvelable à l’ensemble des besoins en énergie des bâtiments.
           </p>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4">
@@ -484,7 +488,10 @@
             <img class="img-partner-logo" alt="logo BAO Formation" src='images/bao_formation_logo.png'>
           </div>
           <p>
-            BAO Formation est un organisme de formation aux métiers d’hier et de demain, dispensant chaque année près de 200 000 heures de formation en France, à destination de plus de 600 stagiaires. La pédagogie proposée est axée sur le geste professionnel et la formation en situation de production. Les formations proposées répondent aux nouveaux besoins de recrutement dans le bâtiment comme la maçonnerie sur cordes, la pose de panneaux photovoltaïques ou encore la maçonnerie du bâti ancien.
+            BAO Formation est un organisme de formation aux métiers d’hier et de demain, dispensant chaque année près de 200 000 heures de formation en France, à destination de plus de 600 stagiaires. La pédagogie proposée est axée sur le geste professionnel et la formation en situation de production. 
+          </p>
+          <p>
+            Les formations proposées répondent aux nouveaux besoins de recrutement dans le bâtiment comme la maçonnerie sur cordes, la pose de panneaux photovoltaïques ou encore la maçonnerie du bâti ancien.
           </p>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4">
@@ -492,7 +499,10 @@
             <img class="img-partner-logo" alt="logo ENGIE MyPower" src='images/engie_mypower_logo.png'>
           </div>
           <p>
-            ENGIE My Power est l’entité du Groupe ENGIE dédiée à la commercialisation en France d’énergie et des services associés aux particuliers et petits professionnels. 1er fournisseur d’électricité verte en France, Engie propose également des solutions solaires en autoconsommation pour les clients particuliers avec My Power. Son ambition est d’accompagner ses clients pour agir en faveur de la transition énergétique et contribuer ainsi à un progrès harmonieux.
+            ENGIE My Power est l’entité du Groupe ENGIE dédiée à la commercialisation en France d’énergie et des services associés aux particuliers et petits professionnels. 1er fournisseur d’électricité verte en France, Engie propose également des solutions solaires en autoconsommation pour les clients particuliers avec My Power. 
+          </p>
+          <p>
+            Son ambition est d’accompagner ses clients pour agir en faveur de la transition énergétique et contribuer ainsi à un progrès harmonieux.
           </p>
         </div>
       </div>
