--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <title>Poseurs d'Avenir</title>
+    <title>Poseurs d'Avenir : formations à la pose de panneaux solaires</title>
     <meta name="description" content="Poseurs d’Avenir propose des formations solaires inédites, co-construites par DualSun, BAO Formation & ENGIE My Power.">
     <meta property=”og:image” content=”images/poseurs_davenir_hero.png” />
     <meta charset="utf-8">
