test again automatic push

--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
     <div id='footer' class="background-yellow">
       <a href="#"><img alt="logo Poseurs d'Avenir" src='images/poseurs_davenir_logo.png'></a>
       <p>contact@poseursdavenir.com</p>
-      <a href="mentions_legales.html">Mentions légales Test</a>
+      <a href="mentions_legales.html">Mentions légales</a>
     </div>
   </body>
 </html>
