--- a/index.html
+++ b/index.html
@@ -119,9 +119,8 @@
     </div>
     <div id='tremplin' class="section">
       <h2>Module Tremplin vers l’emploi</h2>
-      <h3>Formation de 3 mois</h3>
       <h4>
-        Cette formation est destinée aux demandeurs d’emploi désireux de se former au photovoltaïque, un métier en pleine ascension. La formation, gratuite et rémunérée, est basée sur <strong>le geste professionnel</strong> et donne les clés pour intégrer immédiatement la filière du solaire. 
+        Les formations de ce module sont destinées aux demandeurs d’emploi et personnes en reconversion ayant le désir de se former au photovoltaïque, un métier en pleine ascension. La formation est basée sur <strong>le geste professionnel</strong> et donne les clés pour intégrer immédiatement la filière du solaire. 
       </h4>
       <div class="row">
         <div class="col-xs-12 col-sm-4 margin-top program-image">
@@ -130,28 +129,31 @@
         <div class="col-xs-12 col-sm-8 margin-top card-product">
           <h3>Caractéristiques de la formation :</h3>
           <p><strong>
-            Durée :</strong> 400 heures - 330 heures de formation pure (30% de théorie et 70% de pratique) & 70 heures d’immersion en entreprise lors d’un stage chez un installateur de la région, préfigurant une embauche à la fin du parcours</p>
+            Durée :</strong> 12 à 13 semaines (30% de théorie et 70% de pratique) dont 70 heures d’immersion en entreprise lors d’un stage chez un installateur, préfigurant une possible embauche à la fin du parcours</p>
           <p>
-            <strong>Types de session :</strong> Pose de panneaux en Résidentiel, Pose de panneaux en Centrale
+            <strong>Types de session :</strong> Pose de panneaux en Résidentiel, Pose de panneaux en Centrale/Tertiaire
           </p>
           <p>
-            <strong>Modules :</strong> Couverture charpente, Électricité, Photovoltaïque, Construction* et Monitoring/entretien/dépannage* (*uniquement pour la session en Centrale)
+            <strong>Domaines de compétences :</strong> Couverture charpente, Électricité, Photovoltaïque, Construction* et Monitoring/entretien/dépannage* (*uniquement pour la session en Centrale/Tertiaire)
           </p>
           <p>
-            <strong>Certifications :</strong> Sauveteur Secouriste du Travail (SST), Port du harnais travail en hauteur, Habilitation Electrique BrPV, QualiPV Elec ou HP
+            <strong>Habilitations :</strong> Sauveteur Secouriste du Travail (SST), Port du harnais travail en hauteur
           </p>
           <p>
-            <strong>Suivi individuel :</strong> Un suivi et un accompagnement socioprofessinnel personnalisé
+            <strong>Certifications :</strong> Electrique BrPV, QualiPV Elec ou HP
           </p>
+          <p>
+            <strong>Suivi individuel :</strong> Un suivi et un accompagnement socio-professionnel personnalisé
+          </p>
+          <p><strong>Financement :</strong> Possibilité de prise en charge de la formation selon votre statut. Avec le soutien de Constructys et la Région Sud</p>
           <a href="#calendar" class="btn btn-flat margin-top">Candidatez pour un module Tremplin à l’emploi</a>
         </div>
       </div>
     </div>
     <div id='pro' class="section background-yellow">
       <h2>Module PRO</h2>
-      <h3>Formation de 3 semaines</h3>
       <h4>
-        Le module professionnel est destiné aux professionnels du secteur du bâtiment ou du solaire qui souhaitent approfondir leurs compétences et qualifications dans le domaine du  photovoltaïque. 
+        Le module professionnel est destiné aux professionnels et entreprises du secteur du bâtiment ou du solaire qui souhaitent approfondir leurs compétences et qualifications dans le domaine du  photovoltaïque. 
       </h4>
       
       <div class="row">
@@ -160,12 +162,15 @@
         </div>
         <div class="col-xs-12 col-sm-8 margin-top card-product">
           <h3>Caractéristiques de la formation :</h3>
-          <p><strong>Durée :</strong> 105 heures</p>
+          <p><strong>Durée :</strong> 3 semaines maximum</p>
           <p>
             <strong>Types de session :</strong> Formation à la carte
           </p>
           <p>
-            <strong>Certifications :</strong> Sauveteur Secouriste du Travail (SST), Port du harnais travail en hauteur, Habilitation Electrique BrPV, QualiPV Elec ou HP
+            <strong>Habilitations :</strong> Sauveteur Secouriste du Travail (SST), Port du harnais travail en hauteur
+          </p>
+          <p>
+            <strong>Certifications :</strong> Electrique BrPV, QualiPV Elec ou HP
           </p>
           <a href="#calendar" class="btn btn-flat margin-top">Inscrivez-vous pour un module PRO</a>
         </div>
@@ -173,7 +178,6 @@
     </div>
     <div id='qualif' class="section">
       <h2>Module QUALIF'</h2>
-      <h3>Formation de 3 ou 4 jours</h3>
       <h4>
         Poseurs d’Avenir propose plusieurs formations pour obtenir différentes certifications RGE en lien avec le secteur solaire. 
       </h4>
@@ -197,9 +201,8 @@
     </div>
     <div id='apprenti' class="section background-yellow">
       <h2>NRSud, l'Ecole des Energies Propres</h2>
-      <h3>Formation de 3 ou 4 ans</h3>
       <h4>
-        NRSud, la toute nouvelle école du solaire créée par Tenergie, TotalEnergies Renouvelables, ENGIE, DualSun, Bao Formation et  Sys ENR recrute ses élèves dès 15 ans pour les niveaux CAP/Bac Pro. Il s’agit d’un établissement privé mais dont l’apprentissage est gratuit pour les élèves dès 15 ans.
+        NRSud, la toute nouvelle école du solaire créée par Tenergie, TotalEnergies Renouvelables, ENGIE, DualSun, Bao Formation et  Sys ENR recrute ses apprentis dès 15 ans pour les niveaux CAP/Bac Pro. Il s’agit d’un établissement privé mais dont l’apprentissage est gratuit pour les apprentis dès 15 ans.
       </h4>
       <p>
         Grace à des promotions en petit effectif et un taux d’encadrement très resserré (14 élèves accompagnés par 2 maitres professionnels), les élèves apprennent vite et bien. Cela leur permet d’obtenir un CAP en électricité, un Bac Professionnel en maintenance et efficacité énergétique ainsi qu’un CQP en installation de panneaux solaires photovoltaïques et thermiques en 3 ou 4 ans selon leur progression individuelle.
@@ -214,13 +217,13 @@
         </div>
         <div class="col-xs-12 col-sm-8 margin-top card-product">
           <h3>Caractéristiques de la formation :</h3>
-          <p><strong>Durée :</strong> 3 ou 4 ans, 35h/semiane dont 80% en apprentissage</p>
+          <p><strong>Durée :</strong> 3 ou 4 ans, 35h/semaine dont 80% en apprentissage</p>
           <p><strong>Taux d'encadrement :</strong> 2 maîtres professionnels pour 14 élèves, 1 maître référent pour la fabrication en atelier et 1 autre maître référent pour la réalisation des chantiers en extérieur.</p>
           <p>
-            <strong>Certifications :</strong> CAP électricien du solaire ou BAC Pro Technicien du solaire
+            <strong>Habilitations :</strong> Sauveteur Secouriste du Travail (SST), Port du harnais travail en hauteur
           </p>
           <p>
-            <strong>Habilitations :</strong> Sauveteur Secouriste du Travail (SST), Port du harnais travail en hauteur, Habilitation Electrique BrPV, QualiPV Elec ou HP, QualiSol, QualiPac, permis CACES
+            <strong>Certifications :</strong> CAP électricien du solaire ou BAC Pro Technicien du solaire, Electrique BrPV, QualiPV Elec ou HP, QualiSol, QualiPac, permis CACES 
           </p>
           <a href="https://forms.gle/zXkDzEYiinUxzBC89" target="_blank" class="btn btn-flat margin-top">Candidatez pour NRSud</a>
         </div>
