--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
       </p>
     </div>
     <div id='partners' class="section">
-      <h2>Partenaires</h2>
+      <h2>Fondateurs</h2>
       <p>Poseurs d’Avenir est une marque issue d’un partenariat entre BAO Formation, organisme de formation aux métiers du bâtiment et autres secteurs en tension, DualSun, fabricant français de panneaux solaires et ENGIE My Power, acteur mondial de la transition énergétique.
       </p>
       <div class="row partners">
