small text diff

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <link rel="icon" href="images/poseurs_davenir_icon.png">
     <link rel="stylesheet" href="style.css" type="text/css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css">
+    <script src="https://kit.fontawesome.com/f557889666.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -123,8 +123,9 @@
         Les formations de ce module sont destinées aux demandeurs d’emploi et personnes en reconversion ayant le désir de se former au photovoltaïque, un métier en pleine ascension. La formation est basée sur <strong>le geste professionnel</strong> et donne les clés pour intégrer immédiatement la filière du solaire. 
       </h4>
       <div class="row">
-        <div class="col-xs-12 col-sm-4 margin-top program-image">
+        <div class="col-xs-12 col-sm-4 margin-top image-section">
           <img src="images/poseurs_davenir_tremplin.png" alt="module tremplin - poseurs en formation" class="description-image"/>
+          <p>Ce module est en partie possible grâce au soutien de <strong>Constructys</strong> et <strong>la Région Sud</strong>.</p>
         </div>
         <div class="col-xs-12 col-sm-8 margin-top card-product">
           <h3>Caractéristiques de la formation :</h3>
@@ -145,8 +146,9 @@
           <p>
             <strong>Suivi individuel :</strong> Un suivi et un accompagnement socio-professionnel personnalisé
           </p>
-          <p><strong>Financement :</strong> Possibilité de prise en charge de la formation selon votre statut. Avec le soutien de Constructys et la Région Sud</p>
+          <p><strong>Financement :</strong> Possibilité de prise en charge de la formation selon votre statut.</p>
           <a href="#calendar" class="btn btn-flat margin-top">Candidatez pour un module Tremplin à l’emploi</a>
+          
         </div>
       </div>
     </div>
