add form for installers

--- a/index.html
+++ b/index.html
@@ -466,6 +466,7 @@
       <p>
         Lors de chaque formation, des rencontres avec les entreprises sont organisées, débouchant sur de potentielles embauches, avec des entreprises aux besoins actés. 
       </p>
+      <a href="https://forms.gle/4eWk3X25Pqxz8tNn9" target="_blank" class="btn btn-flat margin-top">Recrutez avec Poseurs d'Avenir</a>
     </div>
     <div id='partners' class="section">
       <h2>Fondateurs</h2>
